--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^2.2.2 # lưu use (lỗi thì xóa thèn này)
   cupertino_icons: ^1.0.8
   sqflite: ^2.3.0     # Thư viện SQLite
   path: ^1.8.3        # Dùng để lấy đường dẫn DB
@@ -24,6 +25,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+
 
 
 
