--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
   shared_preferences: ^2.2.2 # lưu use (lỗi thì xóa thèn này)
   cupertino_icons: ^1.0.8
   sqflite: ^2.3.0     # Thư viện SQLite
-  path: ^1.8.3        # Dùng để lấy đường dẫn DB
+  path: ^1.8.0        # Dùng để lấy đường dẫn DB
+  audioplayers: ^6.0.0 # Thư viện phát nhạc
 
 
 dev_dependencies:
@@ -24,7 +25,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/
+    - assets/images/ 
+    - assets/music/
 
 
 
