--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,8 @@
+# Giữ nguyên những dòng cũ
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+
+# ⚡ Tối ưu build
+org.gradle.parallel=true
+org.gradle.caching=true
